initated project Glozio

--- a/src/components/molecules/gloziotag/gloziotag.module.scss
+++ b/src/components/molecules/gloziotag/gloziotag.module.scss
@@ -5,6 +5,7 @@
 @import '../../../styles/typography';
 
 .glozioTagContainer {
+    z-index: 9000;
     position: fixed;
     bottom: 0;
     left: 0;
